Fix view menu popup style
Bottom border is not visible anymore because the popup was made
scrollable (last element is now the scrollbar and not the
view-menu-item)

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/viewbutton/ViewMenuPopup.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/viewbutton/ViewMenuPopup.css
@@ -49,11 +49,11 @@
     border-top-color: @item-selection-border-color;
   }
 
-  &.selected:last-child {
+  &.selected.last {
     border-color: @item-selection-border-color;
   }
 
-  &:last-child {
+  &.last {
     border-bottom: 1px solid @border-color;
   }
 
